--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -11,7 +11,6 @@
 	</div>
 	<div class="sub-title text-center">
 		<p>さぁ、みんなで世界を旅しよう！</p>
-		<%=@plan.title %>
 	</div>
 
 </div>
@@ -19,6 +18,11 @@
 <div class="new-travels container">
 	<div class="menu-titile text-center">
 		<h2>新着旅行企画</h2>
+		<% @plans .each do |plan| %>
+		<h2><%= plan.title %></h2>
+		<p><%= plan.content %></p>
+		<% end %>
+
 		
 	</div>
 
