--- a/app/assets/stylesheets/plans.scss
+++ b/app/assets/stylesheets/plans.scss
@@ -10,6 +10,11 @@ body{
 	padding:0;
 }
 
+img { 
+    max-width: 100%; 
+    height:auto;
+}
+
 .site-title h1{
 	margin:0;
 	float:left;
@@ -24,14 +29,52 @@ body{
 	font-size:30px;
 }
 
+
 .top-page{
-	background-image: url("/images/uyuni.png");
-	background-size:cover;
-	background-position: center center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	height: 100vh;
+		background-image: url("/images/top.png");
+		max-width:100%;
+		background-size:cover;
+		background-repeat: no-repeat;
+		background-size: cover;
+		height: 680px;
+		position:relative;
 }
+
+.sign-button{
+	position:absolute;
+	left:40%;
+	top:80%;
+}
+
+@media (max-width: 770px){
+	.top-page {
+	  height:432px;
+	}
+
+	.sign-button{
+		left:35%; 
+		
+	}
+
+
+}
+
+
+@media (max-width: 640px){
+	.top-page {
+	  height:215px;
+	}
+
+	.sign-button{
+		display:flex;
+		left:14%; 
+		top:72%;
+		
+	}
+}
+ 
+
+
 
 .new-travels{
 	padding:70px 0
@@ -41,3 +84,4 @@ body{
 .menu-titile h2{
 	font-size:30px;
 }
+
