--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,23 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.sign_up{
+	background-image: url("/images/sign-up.jpg");
+	height:100vh;
+	max-width:100%;
+	background-position: left center;
+  background-size:cover;
+  background-repeat: no-repeat;
+	background-size: cover;
+	color:white;
+}
+
+.field{
+	margin-top:30px;
+}
+
+.actions{
+	margin-top:50px;
+	color:white;
+}
