--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,9 +17,20 @@
 @import "font-awesome";
 @import "bootstrap";
 
+body{
+  margin:0;
+  padding:0;
+}
 
-ul li{
-  list-style: none;
+img { 
+  max-width: 100%; 
+  height:auto;
+}
+
+ul {
+  li{
+    list-style: none;
+  }
 }
 
 .notice {
