--- a/app/assets/stylesheets/plans.scss
+++ b/app/assets/stylesheets/plans.scss
@@ -5,30 +5,6 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-body{
-  margin:0;
-  padding:0;
-}
-
-img { 
-  max-width: 100%; 
-  height:auto;
-}
-
-.site-title h1{
-  margin:0;
-  float:left;
-}
-
-.global-menu{
-  float:right;
-}
-
-.sub-title p{
-  color:white;
-  font-size:30px;
-}
-
 
 .top-page{
   background-image: url("/images/top.png");
@@ -40,15 +16,20 @@ img {
   position:relative;
 }
 
-.sign-button{
-  position:absolute;
-  left:40%;
-  top:80%;
+.sign{
+  
+  &__button{
+    position:absolute;
+    left:40%;
+    top:80%;
+    color:white;
+  }
+
+  &__button a{
+    color:white;
+  }
 }
 
-.sign-button a{
-  color:white;
-}
 
 @media (max-width: 770px){
 
@@ -56,27 +37,29 @@ img {
     height:432px;
   }
 
-  .sign-button{
-    left:35%;
+  .sign{
+
+    &__button{
+      left:35%;
+    }
   }
+
 }
 
 @media (max-width: 640px){
   .top-page {
     height:215px;
   }
-  .sign-button{
-    display:flex;
-    left:14%; 
-    top:72%;	
+
+  .sign{
+    
+    &__button{
+      display:flex;
+      left:14%; 
+      top:72%;	
+    }
   }
-}
- 
-.new-travels{
-  padding:70px 0
+
 }
 
-.menu-titile h2{
-  font-size:30px;
-}
 
