--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,22 +14,33 @@
  *= require_self
  */
 
-@import "font-awesome";
-@import "bootstrap";
-
-
-ul li{
-  list-style: none;
-}
-
-.notice {
-  background-color: blue;
-  color: white;
-  text-align: center;
-}
-
-.alert {
-  background-color: red;
-  color: white;
-  text-align: center;
-}
+ @import "font-awesome";
+ @import "bootstrap";
+ 
+ body{
+   margin:0;
+   padding:0;
+ }
+ 
+ img { 
+   max-width: 100%; 
+   height:auto;
+ }
+ 
+ ul {
+   li{
+     list-style: none;
+   }
+ }
+ 
+ .notice {
+   background-color: blue;
+   color: white;
+   text-align: center;
+ }
+ 
+ .alert {
+   background-color: red;
+   color: white;
+   text-align: center;
+ }
