--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-.sign_up{
+.sign-up{
   background-image: url("/images/sign-up.jpg");
   height:100vh;
   max-width:100%;
@@ -12,11 +12,12 @@
   background-repeat: no-repeat;
   background-size: cover;
   color:white;
-}
 
-.enlist{
-  &__field{
+
+  &__enlist{
+    &__field{
     margin-top:30px;
+    }
   }
 
   &__actions{
