--- a/app/views/plans/index.html.haml
+++ b/app/views/plans/index.html.haml
@@ -1,9 +1,9 @@
-.top-page
-  .sign
+.top
+  .top__sign
     - if user_signed_in?
       / ユーザーがログインしているか調べる
       / ユーザーがログインしていた時の処理
-      .sign__button
+      .top__sign__button
         %button.btn.btn-primary.btn-lg.mr-3{type:"button"}
           %i.fa.fa-user-plus{"aria-hidden":"true"}>
           旅行企画
@@ -12,7 +12,7 @@
           = link_to "ログアウト", destroy_user_session_path, method: :delete
     - else
       / ユーザーがログインしていなかった時の処理
-      .sign__button
+      .top__sign__button
         %button.btn.btn-primary.btn-lg.mr-3{type:"button"}
           %i.fa.fa-user-plus{"aria-hidden":"true"}
           = link_to "新規登録", new_user_registration_path, class: 'post'
