--- a/app/views/plans/index.html.haml
+++ b/app/views/plans/index.html.haml
@@ -18,4 +18,4 @@
           = link_to "新規登録", new_user_registration_path, class: 'post'
         %button.btn.btn-danger.btn-lg{type:"button"}
           %i.fa.fa-sign-in{"aria-hidden":"true"}>
-          ログイン
+          = link_to "ログイン", new_user_session_path
