--- a/app/assets/stylesheets/plans.scss
+++ b/app/assets/stylesheets/plans.scss
@@ -58,3 +58,58 @@
     }
   }
 }
+
+.new-travel{
+  padding-top:40px;
+  padding-bottom:40px;
+    h1{
+      font-size:30px;
+      background: #dfefff;
+      box-shadow: 0px 0px 0px 5px #dfefff;
+      border: dashed 1px #96c2fe;
+      padding: 0.2em 0.5em;
+      color: #454545;
+      margin-bottom:20px;
+    }  
+  
+    input{
+      width:100%;
+      border:1px solid gray;
+      border-radius:4px;
+      padding:8px;
+    }
+
+    textarea{
+      width:100%;
+      border:1px solid gray;
+      border-radius:4px;
+      height:300px;
+    }
+
+    .red{
+      color:red;
+    }
+
+      &__enlist{
+        &__field{
+          margin-top:30px;
+        }
+
+        &__img {
+          margin-top:30px;
+            input{
+              border:none;
+              padding:0;
+            }
+
+            label{
+              padding:0;
+            }
+        }
+
+        &__text-area{
+          margin-bottom:30px;
+        }
+      }
+}
+
