--- a/app/views/plans/new.html.haml
+++ b/app/views/plans/new.html.haml
@@ -13,7 +13,7 @@
           %br/
         .new-travel__enlist__img
           = f.label :アイキャッチ画像
-          = f.file_field :img, id: :book_img
+          = f.file_field :image
           %br/
         .new-travel__enlist__field
           = f.label :開催日	
