--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -6,23 +6,23 @@
         = render "devise/shared/error_messages", resource: resource
         .sign-up__enlist
           .sign-up__enlist__field
-            = f.label :お名前
-            %br/
+            .sign-up__enlist__field__label
+              = f.label :お名前
             = f.text_field :name, autofocus: true
           .sign-up__enlist__field
-            = f.label :メールアドレス
-            %br/
+            .sign-up__enlist__field__label
+              = f.label :メールアドレス
             = f.email_field :email, autofocus: true, autocomplete: "email"
           .sign-up__enlist__field
-            = f.label :パスワード
-            - if @minimum_password_length
-              %em
+            .sign-up__enlist__field__label
+              = f.label :パスワード
+              - if @minimum_password_length
+                %em
                 (#{@minimum_password_length}文字以上)
-            %br/
             = f.password_field :password, autocomplete: "new-password"
           .sign-up__enlist__field
-            = f.label :パスワード確認
-            %br/
+            .sign-up__enlist__field__label
+              = f.label :パスワード確認
             = f.password_field :password_confirmation, autocomplete: "new-password"
           .sign-up__enlist__field
             = f.submit "新規登録",class: 'sign-btn btn btn-warning'
