--- a/app/views/plans/_sidebar.html.haml
+++ b/app/views/plans/_sidebar.html.haml
@@ -2,8 +2,4 @@
   %h2
     おすすめの旅行企画
   %hr
-  - plan_random.each do |plan|
-    =image_tag plan.image.to_s
-    %h3
-      = link_to plan_path(plan) do
-        = plan.title
+  = render partial: 'random', locals: { plans_random: @plans_random}
