--- a/app/views/plans/show.html.haml
+++ b/app/views/plans/show.html.haml
@@ -25,5 +25,5 @@
         .text-center
           %button.btn.btn-danger.btn-lg.mt-5.text-center{type:"button"}
             = link_to "この企画に申し込む"
-      = render partial: 'sidebar', locals: { plan_random: @plan_random}
+      = render partial: 'sidebar', locals: { plans_random: @plans_random}
 
