--- a/app/views/plans/_sidebar.html.haml
+++ b/app/views/plans/_sidebar.html.haml
@@ -2,4 +2,4 @@
   %h2
     おすすめの旅行企画
   %hr
-  = render partial: 'random_plan', collection: @random_plans
+  = render partial: 'plan', collection: @random_plans
